# CFD-FEM

./: .gitignore  CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  CMakeLists.txt~
src/BasisFunctions/: CMakeLists.txt  H1BarBasis.cpp  H1BarBasis.h  Polynomials.cpp  Polynomials.h
src/BasisFunctions/unit_tests/: CMakeLists.txt  H1BarBasis.test.cpp  Polynomials.test.cpp
src/DataStructures/: Array1D.cpp  Array1D.h  Array1D.h~  Array2D.cpp  Array2D.h  Array2D.h~  Array3D.cpp  Array3D.h  Array3D.h~  Array4D.cpp  Array4D.h  Array4D.h~  CMakeLists.txt  CMakeLists.txt~  CSRMatrix.h  EdgeSet.cpp  EdgeSet.h  Graph.cpp  Graph.h  Heap.cpp  Heap.h  List2D.cpp  List2D.h  SparseMatrix.h  SquareMatrix.cpp  SquareMatrix.h  SquareMatrix.h~  StaticList2D.h
src/DataStructures/unit_tests/: Array1D.test.cpp  Array1D.test.cpp~  Array2D.test.cpp  Array2D.test.cpp~  Array3D.test.cpp  Array3D.test.cpp~  Array4D.test.cpp  CMakeLists.txt  CMakeLists.txt~  CSRMatrix.test.cpp  EdgeSet.test.cpp  Graph.test.cpp  List2D.test.cpp  Square.grid  SquareMatrix.test.cpp  SquareMatrix.test.cpp~  StaticList2D.test.cpp
src/Elements/: BarElement.cpp  BarElement.h  CMakeLists.txt  Element-old.h  Element.cpp  Element.h  TetElement.cpp  TetElement.h  TriElement.cpp  TriElement.h
src/Elements/unit_tests/: BarElement.test.cpp  CMakeLists.txt  TetElement.test.cpp  TriElement.test.cpp
src/Graph/: CMakeLists.txt  Graph.cpp  Graph.h
src/IO/: CMakeLists.txt  DataStructureIO.h  DataStructureReader.h  DataStructureWriter.h  MeshIO.h  UnstMeshReader.cpp  UnstMeshReader.h  UnstMeshReaderGMSH.cpp  UnstMeshReaderGMSH.h  UnstMeshReaderNKBGrid.cpp  UnstMeshReaderNKBGrid.h  UnstMeshWriter.h  UnstMeshWriterCGNS.cpp  UnstMeshWriterCGNS.h  UnstMeshWriterVTK.cpp  UnstMeshWriterVTK.h
src/IO/unit_tests/: Box.idmap  Box.msh  Box.msh-bin  CMakeLists.txt  Circle.idmap  Circle.msh  DataStructureReader.test.cpp  DataStructureWriter.test.cpp  Mixed_2D.idmap  Mixed_2D.msh  Mixed_2D.msh-bin  Mixed_3D.idmap  Mixed_3D.msh-bin  UnstMeshReaderGMSH.test.cpp  UnstMeshReaderNKBGrid.test.cpp  UnstMeshWriterCGNS.test.cpp  UnstMeshWriterVTK.test.cpp
src/Include/: InputIO.h  PreGlobalVars.cpp  PreGlobalVars.h  SolGlobalVars.cpp  SolGlobalVars.cpp~  SolGlobalVars.h  SolGlobalVars.h~  consts.h  my_incl.h  my_incl.h~  precision.h
src/LinearSolver/: CMakeLists.txt  LinearSolver.cpp  LinearSolver.h  MKLDSS.cpp  MKLDSS.h  PetscSolver.cpp  PetscSolver.h
src/LinearSolver/unit_tests/: CMakeLists.txt  MKLDSS.test.cpp  PetscSolver.test.cpp  Square_quad.geo  Square_quad.idmap  Square_quad.msh  petscrc
src/Main/: PreProc_main.cpp  main2D.cpp  main2D.cpp~  main3D.cpp  main3D.cpp~
src/MathUtilities/: complexify.h
src/Mesh/: CGMesh.cpp  CGMesh.h  CMakeLists.txt  DummyMesh.cpp  DummyMesh.h  ElementTopology.cpp  ElementTopology.h  ElementTopologyBar.cpp  ElementTopologyBar.h  ElementTopologyHexahedron.cpp  ElementTopologyHexahedron.h  ElementTopologyPrism.cpp  ElementTopologyPrism.h  ElementTopologyPyramid.cpp  ElementTopologyPyramid.h  ElementTopologyQuadrilateral.cpp  ElementTopologyQuadrilateral.h  ElementTopologyTetrahedron.cpp  ElementTopologyTetrahedron.h  ElementTopologyTriangle.cpp  ElementTopologyTriangle.h  UnstGrid.h  UnstMesh.cpp  UnstMesh.h  UnstMeshBcFaces.cpp  UnstMeshBcFaces.h  UnstMeshEdges.cpp  UnstMeshEdges.h  UnstMeshElements.cpp  UnstMeshElements.h  UnstMeshGeom.cpp  UnstMeshGeom.h  UnstMeshWriter.h  UnstMeshWriterCGNS.cpp  UnstMeshWriterCGNS.h
src/Mesh/unit_tests/: CGMesh.test.cpp  CMakeLists.txt  DummyMesh.test.cpp  UnstMesh.test.cpp  UnstMeshBcFaces.test.cpp  UnstMeshEdges.test.cpp  UnstMeshElements.test.cpp  UnstMeshGeom.test.cpp
src/PDE/: Equation.h  EulerPDESet1D.h  EulerPDESet2D.h  EulerPDESet3D.h  Poisson.h
src/PDE/unit_tests/: CMakeLists.txt  Poisson.test.cpp
src/ParallelComm/: CMakeLists.txt  Communication.cpp  Communication.h
src/ParallelComm/unit_tests/: CMakeLists.txt  Communication.test.cpp
src/Residual/: CGResidual.h  GLSResidual.h  Residual.h
src/Residual/unit_tests/: CGResidual.test.cpp  CMakeLists.txt
src/Solution/: CGElementField.cpp  CGElementField.h  CMakeLists.txt  ElementalField.cpp  ElementalField.h  Field.cpp  Field.h  MeshField.cpp  MeshField.h  NodalField.cpp  NodalField.h  Solution.h
src/Solution/unit_tests/: CGElementField.test.cpp  CMakeLists.txt  NodalField.test.cpp
src/SparseMatrix/: CMakeLists.txt  CSRMatrix.cpp  CSRMatrix.h  SparseMatrix.cpp  SparseMatrix.h
src/SparseMatrix/unit_tests/: CMakeLists.txt  CSRMatrix.test.cpp
src/Surreal/: CMakeLists.txt  Surreal.h  SurrealAdd.h  SurrealAdd_Imple.h  SurrealBase.h  SurrealDivide.h  SurrealDivide.h~  SurrealDivide_Imple.h  SurrealDivide_Imple.h~  SurrealLogic.h  SurrealLogic_Imple.h  SurrealLogic_Imple.h~  SurrealMultiply.h  SurrealMultiply.h~  SurrealMultiply_Imple.h  SurrealPow.h  SurrealPow.h~  SurrealPow_Imple.h  SurrealPow_Imple.h~  SurrealSubtract.h  SurrealSubtract_Imple.h  SurrealUnary.h  SurrealUnary.h~
src/Surreal/Forward/: Surreal.h  SurrealAdd.h  SurrealBase.h  SurrealDivide.h  SurrealLogic.h  SurrealMultiply.h  SurrealPow.h  SurrealSubtract.h  SurrealUnary.h
src/Surreal/Forward/unit_tests/: CMakeLists.txt  Surreal.test.cpp  SurrealAdd.test.cpp  SurrealDivide.test.cpp  SurrealLogic.test.cpp  SurrealMultiply.test.cpp  SurrealPow.test.cpp  SurrealSubtract.test.cpp  SurrealUnary.test.cpp
src/Surreal/Reverse/: SurrealR.h  SurrealRAdd.h  SurrealRBase.h  SurrealRDivide.h  SurrealRLogic.h  SurrealRMultiply.h  SurrealRPow.h  SurrealRSubtract.h  SurrealRUnary.h
src/Surreal/Reverse/unit_tests/: CMakeLists.txt  SurrealR.test.cpp  SurrealRAdd.test.cpp  (+6 more)
src/Surreal/unit_tests/: CMakeLists.txt  CMakeLists.txt~  Surreal.test.cpp  SurrealAdd.test.cpp  SurrealDivide.test.cpp  SurrealLogic.test.cpp  SurrealMultiply.test.cpp  SurrealPow.test.cpp  SurrealSubtract.test.cpp  SurrealUnary.test.cpp
src/SystemUtils/: CMakeLists.txt  CMakeLists.txt~  SystemModule.cpp  SystemModule.cpp~  SystemModule.h  SystemModule.h~
src/SystemUtils/unit_tests/: CMakeLists.txt  SystemModule.test.cpp
src/Utilities/: CMakeLists.txt  PolyViz.cpp
(+100 files in other folders)
