ADD_SUBDIRECTORY(BasisFunctions)
ADD_SUBDIRECTORY(DataStructures)
ADD_SUBDIRECTORY(Elements)
ADD_SUBDIRECTORY(IO)
ADD_SUBDIRECTORY(LinearSolver)
ADD_SUBDIRECTORY(Mesh)
ADD_SUBDIRECTORY(ParallelComm)
ADD_SUBDIRECTORY(PDE)
ADD_SUBDIRECTORY(SparseMatrix)
ADD_SUBDIRECTORY(Solution)
ADD_SUBDIRECTORY(Surreal)
ADD_SUBDIRECTORY(SystemUtils)
ADD_SUBDIRECTORY(Utilities)
